# Cabo

./: .gitignore  CMakeLists.txt  README.md  cmake-variants.json
.github/workflows/: ci.yml  release.yml
res/save/: player_name  server_address
src/: main.cpp
src/cabo/: Constants.hpp  ContextObjectIds.cpp  ContextObjectIds.hpp  Game.cpp  Game.hpp  LaunchTarget.hpp  LaunchType.hpp  ResourceIds.hpp  Types.hpp
src/cabo/client/: Client.cpp  Client.hpp  ResourceIds.hpp
src/cabo/client/game/: Anchor.cpp  Anchor.hpp  Board.cpp  Board.hpp  Card.cpp  Card.hpp  CountableButton.cpp  CountableButton.hpp  Deck.cpp  Deck.hpp  Discard.cpp  Discard.hpp  InputController.cpp  InputController.hpp  Participant.cpp  Participant.hpp  PrivateZone.cpp  PrivateZone.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Step.cpp  Step.hpp  Table.cpp  Table.hpp  Types.hpp
src/cabo/client/game/step/: DecideCard.cpp  DecideCard.hpp  DrawCard.cpp  DrawCard.hpp  Finish.cpp  Finish.hpp  MatchCard.cpp  MatchCard.hpp  SeeAllCards.cpp  SeeAllCards.hpp  SeeCard.cpp  SeeCard.hpp  SeeOwnCard.cpp  SeeOwnCard.hpp  SwapCard.cpp  SwapCard.hpp  TakeCard.cpp  TakeCard.hpp
src/cabo/client/menu/: Item.cpp  Item.hpp  Types.cpp  Types.hpp
src/cabo/client/menu/component/: Clickable.cpp  Clickable.hpp  Hoverable.cpp  MouseInteractable.cpp  MouseInteractable.hpp
src/cabo/client/menu/item/: Button.cpp  Button.hpp  Input.cpp  Input.hpp  NotificationQueue.hpp  SimpleImage.cpp  SimpleImage.hpp  SimpleText.cpp  SimpleText.hpp  TransitionEffect.cpp  TransitionEffect.hpp
src/cabo/client/player/: Manager.cpp  Manager.hpp
src/cabo/client/state/: StateIds.hpp  States.hpp
src/cabo/client/state/states/: EnterNameState.cpp  EnterNameState.hpp  (+14 more)
src/cabo/core/: Assert.hpp  Context.hpp  Identifier.hpp  Interpolator.hpp  Log.hpp  Path.cpp  Path.hpp  Random.cpp  Random.hpp  ResourceHolder.hpp  Types.hpp
src/cabo/core/event/: Dispatcher.cpp  Dispatcher.hpp  Event.hpp  Manager.cpp  Slot.hpp  Types.hpp
src/cabo/core/math/: Math.cpp  Math.hpp
src/cabo/core/object/: Container.cpp  Container.hpp  Object.cpp  Object.hpp
src/cabo/core/save/: Save.hpp
src/cabo/core/state/: Manager.cpp  Manager.hpp  State.cpp  State.hpp  StateTypes.hpp
src/cabo/events/: ConnectionEvents.hpp  EventIds.hpp  GameEvents.hpp  InputEvents.hpp  NetworkEvents.hpp  SystemEvents.hpp
src/cabo/game/: Board.cpp  Board.hpp  Card.cpp  Card.hpp  Constants.hpp  Deck.cpp  Deck.hpp  Discard.cpp  Discard.hpp  Player.cpp  Player.hpp  PlayerCards.cpp  PlayerCards.hpp  PlayerSlot.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Table.cpp  Table.hpp  Types.hpp
src/cabo/game/object/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Discard.cpp  Discard.hpp  Player.cpp  Player.hpp  Table.cpp  Table.hpp
src/cabo/game/step/: SeeOwnCard.cpp  SeeOwnCard.hpp  Step.cpp  Step.hpp
src/cabo/menu/: Container.cpp  Container.hpp  Item.cpp  Item.hpp  Types.cpp  Types.hpp  Utils.cpp  Utils.hpp
src/cabo/menu/component/: Clickable.cpp  Clickable.hpp  Drawable.cpp  Drawable.hpp  Hoverable.cpp  Hoverable.hpp  MouseInteractable.cpp  MouseInteractable.hpp  Transformable.cpp  Transformable.hpp
src/cabo/menu/item/: Button.cpp  Button.hpp  SimpleImage.cpp  SimpleImage.hpp  SimpleText.cpp  SimpleText.hpp
src/cabo/net/: Factory.cpp  Factory.hpp  FactoryInitializer.cpp  Manager.cpp  Manager.hpp
src/cabo/server/: Server.cpp  Server.hpp
src/cabo/server/game/: Anchor.hpp  Board.cpp  Board.hpp  Card.hpp  CountableButton.hpp  Deck.cpp  Deck.hpp  Discard.cpp  Discard.hpp  InputController.cpp  InputController.hpp  Participant.cpp  Participant.hpp  PrivateZone.hpp  Step.hpp  Types.hpp
src/cabo/server/player/: Manager.cpp  Manager.hpp
src/cabo/server/state/: States.hpp
src/cabo/shared/board/: Anchor.cpp  Anchor.hpp  Board.cpp  Board.hpp  BoardObject.cpp  BoardObject.hpp  Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Discard.hpp  GrabController.cpp  GrabController.hpp  InteractableController.cpp  InteractableController.hpp  Object.cpp  Object.hpp  Participant.cpp  Participant.hpp  PrivateZone.cpp  PrivateZone.hpp
src/cabo/shared/events/: ConnectionEvents.hpp  EventIds.hpp  GameEvents.hpp  InputEvents.hpp  NetworkEvents.hpp
src/cabo/shared/game/: Anchor.hpp  Board.cpp  Board.hpp  Card.cpp  Card.hpp  CardValue.cpp  CardValue.hpp  Constants.hpp  Deck.cpp  Deck.hpp  Discard.hpp  Object.hpp  Participant.hpp  Placement.cpp  Placement.hpp  PrivateZone.hpp  Step.cpp  Step.hpp  StepId.hpp  Types.hpp
src/cabo/shared/net/: Factory.hpp  FactoryInitializer.cpp  FactoryInitializer.hpp  Manager.cpp  Manager.hpp
src/cabo/shared/player/: Types.hpp
src/cabo/state/: State.cpp  State.hpp  StateManager.cpp  StateManager.hpp  StateName.hpp  StateTypes.hpp
src/cabo/state/states/: TitleState.cpp  TitleState.hpp
src/cabo/states/: FinishState.cpp  FinishState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  StateIds.hpp  TitleState.cpp  TitleState.hpp
src/cato/client/: Client.cpp  ResourceIds.hpp
src/cato/client/game/: Anchor.hpp  Card.cpp  Card.hpp  CountableButton.hpp  Deck.cpp  Deck.hpp  Discard.cpp  Discard.hpp  InputController.cpp  Participant.cpp  PrivateZone.cpp  SpriteSheet.cpp  SpriteSheet.hpp
src/cato/client/menu/: Item.cpp  Types.hpp  Utils.hpp
src/cato/client/player/: Manager.cpp
src/cato/client/state/: StateIds.hpp  States.hpp
src/cato/core/: Interpolator.cpp  Random.cpp  Random.hpp  ResourceHolder.hpp
src/cato/core/event/: Dispatcher.cpp  Event.hpp  Manager.hpp
src/cato/core/object/: Container.cpp  Object.hpp
src/cato/core/save/: Save.cpp  Save.hpp
src/cato/core/state/: Manager.hpp
src/cato/server/: Server.cpp  Server.hpp
src/cato/server/game/: Anchor.hpp  Card.hpp  Deck.hpp  InputController.cpp  InputController.hpp  PrivateZone.hpp
src/cato/server/player/: Manager.hpp
src/cato/server/state/: StateIds.hpp
src/cato/shared/: Types.hpp
src/cato/shared/events/: EventIds.hpp  InputEvents.hpp
src/cato/shared/game/: Board.cpp  Board.hpp  Constants.hpp  Placement.cpp  Types.hpp
src/cato/shared/net/: Factory.cpp  Manager.cpp
src/cato/shared/player/: Types.hpp
(+113 files in other folders)
